--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
 "repository": {
    "type": "git",
    "url": "https://github.com/Mithgol/node-unsquish.git"
+},
+"dependencies": {
+   "fidonet-squish": "0.0.39"
 }
 }
