+1 dependency: Ciel (coloured logs in console) version ~0.2.0

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
    "url": "https://github.com/Mithgol/node-unsquish.git"
 },
 "dependencies": {
+   "ciel": "~0.2.0",
    "fidonet-squish": "0.0.39"
 }
 }
