--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ node_js:
   - "4.2"
   - stable
 before_script:
-  - "npm install jshint@2.9.1-rc2"
+  - "npm install jshint"
 install:
   - "npm install --production"
