+1 dependency: `async` version ~1.5.2

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
    "url": "https://github.com/Mithgol/node-unsquish.git"
 },
 "dependencies": {
+   "async": "~1.5.2",
    "ciel": "~0.2.0",
    "fidoconfig": "~0.2.5",
    "fidonet-squish": "0.0.39"
